Fix inline code sections causing overflow

--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_code.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_code.scss
@@ -33,4 +33,5 @@ code {
 	padding: 3px 5px;
 	border-radius: 4px;
 	background-color: $code-background-color;
+	word-break: break-word; //dont overflow off the side
 }
